crates/pulsus-traceql/tests/corpus/accept/duration_frac_ns_boundary.traceql
{ duration = 0.000000001s }
