crates/pulsus-traceql/tests/corpus/reject/duration_fractional_ms.traceql
{ duration = 0.0000001ms }
